--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,83 +5,121 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity"
-    android:background="#9ac870		">
+    android:background="@color/light_green">
 
     <Button
         android:id="@+id/buttonRegistration"
         android:layout_width="251dp"
         android:layout_height="71dp"
-        android:layout_marginStart="71dp"
-        android:layout_marginTop="14dp"
-        android:layout_marginEnd="71dp"
-        android:layout_marginBottom="94dp"
-        android:backgroundTint="#269750"
+        android:layout_marginEnd="72dp"
+        android:layout_marginBottom="100dp"
+        android:backgroundTint="@color/green"
         android:onClick="registr"
         android:text="@string/registration"
-        android:textColor="@color/white"
+        android:textColor="@color/light2_green"
         android:textSize="25sp"
         android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/buttonAuthorization"
         tools:ignore="MissingConstraints" />
 
     <Button
         android:id="@+id/buttonAuthorization"
         android:layout_width="252dp"
         android:layout_height="71dp"
-        android:layout_marginStart="71dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="71dp"
-        android:layout_marginBottom="14dp"
-        android:backgroundTint="#269750"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="36dp"
+        android:backgroundTint="@color/green"
         android:text="@string/login"
-        android:textColor="@color/white"
+        android:textColor="@color/light2_green"
         android:textSize="25sp"
         android:visibility="visible"
         app:layout_constraintBottom_toTopOf="@+id/buttonRegistration"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/rabbitHello"
-        tools:ignore="MissingConstraints,TextContrastCheck" />
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
+        app:layout_constraintVertical_bias="0.489"
+        tools:ignore="MissingConstraints,TextContrastCheck"
+        tools:layout_editor_absoluteX="69dp" />
 
     <TextView
         android:id="@+id/textHello"
         android:layout_width="326dp"
         android:layout_height="67dp"
         android:layout_marginStart="33dp"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="90dp"
         android:layout_marginEnd="34dp"
-        android:layout_marginBottom="-50dp"
         android:fontFamily="@font/adamina"
         android:text="@string/hello_my_friend"
         android:textAppearance="@style/TextAppearance.AppCompat.Display2"
-        android:textColor="#126f35"
+        android:textColor="@color/green"
         android:textSize="40sp"
         android:visibility="visible"
-        app:layout_constraintBottom_toTopOf="@+id/rabbitHello"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="MissingConstraints,TextSizeCheck,TextContrastCheck" />
 
-    <ImageView
-        android:id="@+id/rabbitHello"
-        android:layout_width="246dp"
-        android:layout_height="447dp"
-        android:layout_marginStart="71dp"
-        android:layout_marginEnd="71dp"
-        android:layout_marginBottom="-70dp"
-        android:contentDescription="@string/iconfirst"
-        android:visibility="visible"
-        app:layout_constraintBottom_toTopOf="@+id/buttonAuthorization"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textHello"
-        app:srcCompat="@drawable/animalhello"
-        tools:ignore="ImageContrastCheck,MissingConstraints" />
+    <LinearLayout
+        android:id="@+id/linearLayout"
+        android:layout_width="294dp"
+        android:layout_height="281dp"
+        android:orientation="vertical"
+        tools:layout_editor_absoluteX="49dp"
+        tools:layout_editor_absoluteY="211dp">
+
+        <TextView
+            android:id="@+id/textView_login"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
+            android:text="@string/login"
+            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+            android:textColor="@color/light2_green"
+            android:textSize="20sp"
+            android:textStyle="bold" />
+
+        <EditText
+            android:id="@+id/editText_login"
+            android:layout_width="289dp"
+            android:layout_height="57dp"
+            android:layout_marginTop="15dp"
+            android:autofillHints=""
+            android:background="@drawable/rounded_input"
+            android:ems="10"
+            android:inputType="text"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.958"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/nameRG"
+            tools:ignore="LabelFor,SpeakableTextPresentCheck" />
+
+        <TextView
+            android:id="@+id/textView_password"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:text="@string/password"
+            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+            android:textColor="@color/light2_green"
+            android:textSize="20sp"
+            android:textStyle="bold" />
+
+        <EditText
+            android:id="@+id/editText_Password"
+            android:layout_width="289dp"
+            android:layout_height="57dp"
+            android:layout_marginTop="15dp
+"
+            android:autofillHints=""
+            android:background="@drawable/rounded_input"
+            android:ems="10"
+            android:inputType="textPassword"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.958"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/nameRG"
+
+            tools:ignore="LabelFor,SpeakableTextPresentCheck" />
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
