--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,8 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="light_green">#9ac870</color>
+    <color name="green">#269750</color>
+    <color name="dark_green">#55269750</color>
+    <color name="light2_green">#B5F1B5</color>
 </resources>
